--- a/index.ipynb
+++ b/index.ipynb
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -78,7 +78,7 @@
        " 'Pyeongchang']"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -116,7 +116,7 @@
        " 'South Korea']"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -134,18 +134,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 12,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "top_travel_cities = ['Solta', 'Greenville', 'Buenos Aires', 'Los Cabos', 'Walla Walla Valley', 'Marakesh', 'Albuquerque', 'Archipelago Sea', 'Iguazu Falls', 'Salina Island', 'Toronto', 'Pyeongchang']"
+    "top_travel_cities = ['Solta', 'Greenville', 'Buenos Aires', 'Los Cabos', 'Walla Walla Valley', 'Marakesh', 'Albuquerque', 'Archipelago Sea', 'Iguazu Falls', 'Salina Island', 'Toronto', 'Pyeongchang']\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +163,7 @@
        " 'Pyeongchang']"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -176,10 +174,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 14,
+   "metadata": {},
    "outputs": [],
    "source": [
     "countries_of_top_cities = ['Croatia', 'USA', 'Argentina', 'Mexico', 'USA', 'Morocco', 'New Mexico', 'Finland', 'Argentina', 'Italy', 'Canada', 'South Korea']"
@@ -212,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -232,7 +228,7 @@
        " 'Pyeongchang']"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -243,8 +239,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
+   "execution_count": 18,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -252,7 +250,7 @@
        "'Solta'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -272,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -281,7 +279,7 @@
        "'Buenos Aires'"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -299,34 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Pyeongchang'"
-      ]
-     },
-     "execution_count": 83,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "top_travel_cities[-1]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "And we can move back as many as we want."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -335,7 +306,7 @@
        "'Toronto'"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -348,12 +319,39 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "And we can move back as many as we want."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Salina Island'"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "top_travel_cities[-3]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Each element in our list is a string, so, we can always set an element of our string equal to a variable."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +360,7 @@
        "'Toronto'"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -374,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -383,7 +381,7 @@
        "str"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -401,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -421,7 +419,7 @@
        " 'Pyeongchang']"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -432,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -441,7 +439,7 @@
        "list"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -466,22 +464,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['Solta', 'Greenville']"
+       "['Greenville', 'Buenos Aires']"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "top_travel_cities[0:2]"
+    "top_travel_cities[1:3]"
    ]
   },
   {
@@ -495,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -515,7 +513,7 @@
        " 'Pyeongchang']"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -533,22 +531,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['Walla Walla Valley']"
+       "['Solta']"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "top_travel_cities[4:5]"
+    "top_travel_cities[0:1]"
    ]
   },
   {
@@ -625,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -634,7 +632,7 @@
        "['Solta', 'Greenville']"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -667,10 +665,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 38,
+   "metadata": {},
    "outputs": [],
    "source": [
     "top_travel_cities.append('San Antonio')"
@@ -685,7 +681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -706,7 +702,7 @@
        " 'San Antonio']"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -765,22 +761,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'San Antonio'"
+       "['Solta',\n",
+       " 'Greenville',\n",
+       " 'Buenos Aires',\n",
+       " 'Los Cabos',\n",
+       " 'Walla Walla Valley',\n",
+       " 'Marakesh',\n",
+       " 'Albuquerque',\n",
+       " 'Archipelago Sea',\n",
+       " 'Iguazu Falls',\n",
+       " 'Salina Island',\n",
+       " 'Toronto']"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "top_travel_cities.pop()"
+    "top_travel_cities.pop()\n",
+    "top_travel_cities\n"
    ]
   },
   {
@@ -792,7 +799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -801,7 +808,7 @@
        "'Walla Walla Valley'"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -812,10 +819,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 43,
+   "metadata": {},
    "outputs": [],
    "source": [
     "top_travel_cities[4] = 4"
@@ -823,7 +828,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -839,12 +844,10 @@
        " 'Archipelago Sea',\n",
        " 'Iguazu Falls',\n",
        " 'Salina Island',\n",
-       " 'Toronto',\n",
-       " 'Pyeongchang',\n",
-       " 'San Antonio']"
+       " 'Toronto']"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -862,10 +865,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 45,
+   "metadata": {},
    "outputs": [],
    "source": [
     "top_travel_cities[4] = 'Walla Walla Valley'"
@@ -880,7 +881,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -896,12 +897,10 @@
        " 'Archipelago Sea',\n",
        " 'Iguazu Falls',\n",
        " 'Salina Island',\n",
-       " 'Toronto',\n",
-       " 'Pyeongchang',\n",
-       " 'San Antonio']"
+       " 'Toronto']"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -926,10 +925,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 47,
+   "metadata": {},
    "outputs": [],
    "source": [
     "top_travel_cities.append('Solta')"
@@ -951,7 +948,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -964,15 +961,13 @@
        " 'Iguazu Falls',\n",
        " 'Los Cabos',\n",
        " 'Marakesh',\n",
-       " 'Pyeongchang',\n",
        " 'Salina Island',\n",
-       " 'San Antonio',\n",
        " 'Solta',\n",
        " 'Toronto',\n",
        " 'Walla Walla Valley'}"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -991,7 +986,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -1000,7 +995,7 @@
        "set"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1018,7 +1013,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -1026,9 +1021,9 @@
      "evalue": "'set' object does not support indexing",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31m-------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-26-3d2453cad46e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0munique_travel_cities\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-51-3d2453cad46e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0munique_travel_cities\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[0;31mTypeError\u001b[0m: 'set' object does not support indexing"
      ]
     }
@@ -1073,10 +1068,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 52,
+   "metadata": {},
    "outputs": [],
    "source": [
     "unique_travel_cities = list(unique_travel_cities)"
@@ -1084,7 +1077,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -1093,7 +1086,7 @@
        "list"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1111,28 +1104,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['Toronto',\n",
-       " 'Archipelago Sea',\n",
-       " 'Iguazu Falls',\n",
-       " 'Pyeongchang',\n",
+       "['Walla Walla Valley',\n",
        " 'Los Cabos',\n",
        " 'Buenos Aires',\n",
-       " 'Marakesh',\n",
-       " 'Greenville',\n",
-       " 'Albuquerque',\n",
+       " 'Solta',\n",
        " 'Salina Island',\n",
-       " 'Walla Walla Valley',\n",
-       " 'San Antonio',\n",
-       " 'Solta']"
+       " 'Albuquerque',\n",
+       " 'Archipelago Sea',\n",
+       " 'Greenville',\n",
+       " 'Toronto',\n",
+       " 'Marakesh',\n",
+       " 'Iguazu Falls']"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1150,16 +1141,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "13"
+       "11"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1170,16 +1161,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "14"
+       "12"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1190,7 +1181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -1207,12 +1198,10 @@
        " 'Iguazu Falls',\n",
        " 'Salina Island',\n",
        " 'Toronto',\n",
-       " 'Pyeongchang',\n",
-       " 'San Antonio',\n",
        " 'Solta']"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1254,14 +1243,14 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.14"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
